--- a/style.css
+++ b/style.css
@@ -24,10 +24,36 @@ body {
 .logos div {
   width: 50px;
   height: 50px;
-  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.logos div:nth-child(1) {
+  background-color: #ffffff;
+}
+.logos div:nth-child(2) {
+  background-color: limegreen;
+}
+.logos div:nth-child(3) {
+  background-color: #000000;
+}
+.logos div:nth-child(4) {
+  background-color: #f0db4f;
+}
+.logos div:nth-child(5) {
+  background-color: lightgreen;
+}
+.logos div:nth-child(6) {
+  background-color: violet;
+}
+
+.logos img {
+  width: 35px;
+}
+
+#css {
+  width: 25px;
 }
 
 .text-box {
@@ -83,6 +109,14 @@ body {
     height: 150px;
   }
 
+  .logos img {
+    width: 105px;
+  }
+
+  #css {
+    width: 75px;
+  }
+
   .text-box {
     font-size: 30px;
     padding: 0;
@@ -110,6 +144,14 @@ body {
   .logos div {
     width: 120px;
     height: 120px;
+  }
+
+  .logos img {
+    width: 80px;
+  }
+
+  #css {
+    width: 60px;
   }
 
   .text-box {
@@ -143,6 +185,14 @@ body {
   .logos div {
     width: 80px;
     height: 80px;
+  }
+
+  .logos img {
+    width: 50px;
+  }
+
+  #css {
+    width: 40px;
   }
 
   .text-box {
